LPS-74319 Mobile Device Rules do not update in site page configuration if more than one change is made

--- a/modules/apps/foundation/mobile-device-rules/mobile-device-rules-web/src/main/resources/META-INF/resources/layout/mobile_device_rules_toolbar.jspf
+++ b/modules/apps/foundation/mobile-device-rules/mobile-device-rules-web/src/main/resources/META-INF/resources/layout/mobile_device_rules_toolbar.jspf
@@ -46,7 +46,7 @@
 			'<%= viewRuleGroupInstancesURL.toString() %>',
 			{
 				success: function(responseData) {
-					$('#<portlet:namespace />uniqueRuleGroupInstancesContainer').html(responseData);
+					$('.unique-rule-group-instances-container').html(responseData);
 				}
 			}
 		);
